src/test/deca/syntax/valid/perso/arbre_class_A_extends_B.deca
// Description:
//    Programme minimaliste testant un arbre d'une classe qui s'étend à une autre
//
// Resultats:
//    
//
// Historique:
//    cree le 05/01/2023



class A extends B {
int x = 1;
}