src/test/deca/syntax/invalid/homemade/test/test_pars_inv_class_public.deca
// Description:
//    tests de programme incorrect class protected
//
// Resultats:
//    Ligne 12 : Erreur (no visisbility public)
//    
//
// Historique:
//    cree le 04/01/2023

class A{
    public int x = 8;
}